fixed cronstuff added simple logging added cronsample edited documentation

--- a/sample.env
+++ b/sample.env
@@ -1,5 +1,9 @@
-FREQUENCY="* * * * *" 
+TZ="Europe/Zurich"
 DATE_RANGE="21"
 ICON="https://picon-13398.kxcdn.com/rogersca.jpg"
 CHANNEL_SOURCE="rog_ott_sdh_ch"
 USE_STATIC_CHANNELS="yes"
+use_xTeveAPI=no
+xteveURL=
+use_plexAPI=no
+plexUpdateURL=
