--- a/.github/workflows/docker_manual.yml
+++ b/.github/workflows/docker_manual.yml
@@ -11,14 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: Publish to DockerHub with version-tag
-      uses: elgohr/Publish-Docker-Github-Action@master
-      with:
-        name: abuhamsa/rogers2xmltv
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        tag_names: true
-    - name: Publish to DockerHub with latest-tag
+    - name: Publish to DockerHub with custom-tag
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
         name: abuhamsa/rogers2xmltv
@@ -29,15 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: Publish to GitHub with version-tag
-      uses: elgohr/Publish-Docker-Github-Action@master
-      with:
-        name: abuhamsa/rogers2xmltv
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-        registry: ghcr.io
-        tag_names: true  
-    - name: Publish to GitHub with latest-tag
+    - name: Publish to GitHub with custom-tag
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
         name: abuhamsa/rogers2xmltv
